# RepoDump

./: README.md  index.html  package-lock.json  package.json  release.yml  tailwind.config.js  text.txt  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: generate.rs  mod.rs  scan.rs
src-tauri/src/filters/: mod.rs  tiers.rs
src/components/: ActionBar.tsx  DropZone.tsx  FileTree.tsx  FileTreeNode.tsx  Toggles.tsx
src/lib/: types.ts
