[package]
name = "repo-dump"
version = "0.1.0"
description = "RepoDump — compile local files into LLM-ready Markdown"
authors = []
edition = "2021"

[lib]
name = "repo_dump_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-dialog            = "2"
tauri-plugin-fs                = "2"
tauri-plugin-clipboard-manager = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
walkdir            = "2"

[profile.release]
panic   = "abort"   # smaller binary
codegen-units = 1   # better optimisation
lto     = true      # link-time optimisation
opt-level = "s"     # optimise for size
strip   = true      # strip debug symbols
